External Links and Styling

--- a/files/index.html
+++ b/files/index.html
@@ -40,6 +40,11 @@
                             <br>
                             <li><a href=index.html#aboutMe>-About</a></li>
                             <li><a href=index.html#projects>Projects</a></li>
+                            <br>
+                            <div id ="externalLinks">
+                                <li><a href="https://github.com/artpac"><img src="logo/githubBW.svg"></a></li>
+                                <li><a href="https://www.linkedin.com/in/artpac2050/"><img src="logo/linkedinBW.svg"></a></li>
+                            </div>
                         </div>
                     </div>
 
@@ -48,16 +53,10 @@
                         <div id="screenSection">
                             <br><br>
                             <div id="aboutMe">
-                                <p>As a computer science student at Napier University, 
-                                    you are at the forefront of technology and innovation. 
-                                    You have the opportunity to delve into the fundamental principles of computer science, 
-                                    such as algorithms, data structures, and programming languages.
-                                    With a strong foundation in these areas, you can explore various specializations like artificial intelligence, 
-                                    cybersecurity, and software engineering.
-                                    Napier University's state-of-the-art facilities and collaborations with industry leaders
-                                    provide you with hands-on experience and real-world applications. 
-                                    As you progress, you will develop problem-solving skills, 
-                                    logical thinking, and creativity, making you a valuable asset in the ever-evolving tech industry.</p>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti eligendi quidem illum, laboriosam minus reprehenderit iste aliquid, veniam labore eaque maiores sed officia, rem dolor atque quasi natus ipsum impedit.
+                                Itaque obcaecati perferendis possimus enim autem? Dicta inventore suscipit voluptates molestiae impedit aperiam animi! Fugiat sed, eos ea, adipisci ducimus ut dolorem nostrum, possimus voluptatem rerum dolor aliquam aliquid aperiam!
+                                Modi quibusdam ducimus, eveniet impedit iusto quaerat? Quod, corporis praesentium. Commodi beatae debitis consectetur sapiente delectus, exercitationem culpa officia harum, quibusdam ullam cupiditate eum repellat, dolores minus! Officiis, consectetur sapiente.
+                                Enim, incidunt! Nulla, ea perspiciatis ducimus earum, eos quidem ut tempore error similique nihil vero? Suscipit mollitia, tempore, praesentium, corrupti enim officia ipsum et aperiam iure dolore neque exercitationem doloribus!</p>
                                     <!-- Change paragraph later -->
                                     <br><br><br><br><br><br>
                                     <ul id="languages">
