Created folders for all

--- a/WebPage/public/index.html
+++ b/WebPage/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Artur Pacut</title>
-        <link rel="stylesheet" href="files/style.css">
+        <link rel="stylesheet" href="\WebPage\src/style.css">
         
 
     </head>
@@ -43,8 +43,8 @@
                             <li><a href=index.html#projects>Projects</a></li>
                             <br>
                             <div id ="externalLinks">
-                                <li><a href="https://github.com/artpac"><img src="files/logo/githubBW.svg"></a></li>
-                                <li><a href="https://www.linkedin.com/in/artpac2050/"><img src="files/logo/linkedinBW.svg"></a></li>
+                                <li><a href="https://github.com/artpac"><img src="\WebPage\src/images/githubBW.svg"></a></li>
+                                <li><a href="https://www.linkedin.com/in/artpac2050/"><img src="\WebPage\src/images/linkedinBW.svg"></a></li>
                             </div>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                             <div id="screenSection">
                                 <div id="contactMe">
                                     <br><br>
-                                    <form action="files/submit.php" method="POST" id="form">
+                                    <form action="\WebPage\src//submit.php" method="POST" id="form">
                                         <h3>Contact Me</h3>
                                         <p>Name</p> <input type="text" name="name" class="input">
                                         <p>Email</p> <input type="email" name="email" class="input">
@@ -105,5 +105,5 @@
                 </div>
             </div>
      </body>
-    <script src="files/script.js"></script>
+    <script src="\WebPage\src/script.js"></script>
 </html>
