--- a/WebPage/public/index.html
+++ b/WebPage/public/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Artur Pacut</title>
-        <link rel="stylesheet" href="WebPage/src/style.css">
+        <link rel="stylesheet" href="/WebPage/src/style.css">
+
         
 
     </head>
