--- a/WebPage/src/index.html
+++ b/WebPage/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Artur Pacut</title>
-        <link rel="stylesheet" href="../src/style.css">
+        <link rel="stylesheet" href="style/style.css">
 
         
 
@@ -44,8 +44,8 @@
                             <li><a href=index.html#projects>Projects</a></li>
                             <br>
                             <div id ="externalLinks">
-                                <li><a href="https://github.com/artpac"><img src="\WebPage\src/images/githubBW.svg"></a></li>
-                                <li><a href="https://www.linkedin.com/in/artpac2050/"><img src="\WebPage\src/images/linkedinBW.svg"></a></li>
+                                <li><a href="https://github.com/artpac"><img src="images/githubBW.svg"></a></li>
+                                <li><a href="https://www.linkedin.com/in/artpac2050/"><img src="images/linkedinBW.svg"></a></li>
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                             <div id="screenSection">
                                 <div id="contactMe">
                                     <br><br>
-                                    <form action="\WebPage\src//submit.php" method="POST" id="form">
+                                    <form action="submit.php" method="POST" id="form">
                                         <h3>Contact Me</h3>
                                         <p>Name</p> <input type="text" name="name" class="input">
                                         <p>Email</p> <input type="email" name="email" class="input">
@@ -106,5 +106,5 @@
                 </div>
             </div>
      </body>
-    <script src="\WebPage\src/script.js"></script>
+    <script src="script.js"></script>
 </html>
