--- a/src/index.html
+++ b/src/index.html
@@ -137,8 +137,25 @@
 
                                 <footer id="screenSection">
                                     <br><br>
-                                    <p>© Artur Pacut 2024</p>
-                                    
+                                    <div id="footer">
+                                        <br><br>
+                                        <ul id="webLinks">
+                                            <li><a href="index.html#start">Top</a></li><br>
+                                            <li><a href="index.html#aboutMe">About</a></li><br>
+                                            <li><a href="index.html#projects">Projects</a></li><br>
+                                            <li><a href="index.html#contactMe">Contact</a></li><br>
+                                        </ul>
+                                        <br><br>
+                                        <hr>
+                                        <p id="footerText">© Artur Pacut 2024</p>
+                                        <div id="footerLinks">
+                                            <ul>
+                                                <li><a href="https://github.com/artpac">GH</a></li>
+                                                <li><a href="https://www.linkedin.com/in/artpac2050/">LN</a></li>
+                                                <li><a href="mailto: artpac2050@gmail">EM</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </footer>
                             </div>
                         </div>
