Removed PHP to host

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
 
                                     </div>
                                 </div>
-                                <div id="screenSection">
+                                <!-- <div id="screenSection">
                                     <div id="contactMe">
                                         <br><br>
                                         <form action="submit.php" method="POST" id="form">
@@ -130,7 +130,7 @@
                                             <input type="submit" value="Send">
                                         </form>
                                     </div>
-                                </div>
+                                </div> -->
 
 
                                 <footer id="screenSection">
@@ -141,7 +141,7 @@
                                             <li><a href="index.html#start">Top</a></li><br>
                                             <li><a href="index.html#aboutMe">About</a></li><br>
                                             <li><a href="index.html#projects">Projects</a></li><br>
-                                            <li><a href="index.html#contactMe">Contact</a></li><br>
+                                            <!-- <li><a href="index.html#contactMe">Contact</a></li><br> -->
                                         </ul>
                                         <br><br>
                                         <hr>
