--- a/src/index.html
+++ b/src/index.html
@@ -57,18 +57,26 @@
                                 <div id="screenSection">
                                     <br><br>
                                     <div id="aboutMe">
-                                        <p>I am a computer science student studying at Napier University in Edinburgh. I am learning to program in C, C++, Java, Python, HTML, CSS and JavaScript. I am currently in the process of learning React</p>
-                                        <p>While studing at Napier University I have had many solo projects and quite a few group projects, which can be seen on my GithHub page. This website was created for my advanced web technologies class</p>
+                                        <p>I am currently in my 4th year of a computer science degree at Edinburgh Napier University. I am currently using Java, Python for my courseworks. I am also learning to program in React and use SQL.</p>
+                                        <p>I am currently learning about software architecture for an inventory distribution system for a company, I am using Java to implement a three-tier architecture.</p>
+                                        <p>I am also learning about multi-agent systems which allow for a group of agents to work together, for the coursework I am implementing a multi-agent system in Python. The coursework involves creating
+                                            a simulation of a search and rescue operation using multiple agents to find and rescue victims in a disaster zone.</p>
+                                        <p>For my honours project I am using Java to create a game called "Hive". The game is a turn-based strategy game where you control a pieces with different abilities and moves to surround the opponents queen bee.
+                                            I am also implementing a machine learning algorithm to create an AI opponent that can learn and improve its gameplay over time.</p>
+                                        </p>
+                                        <p>One of the projects I created over summer is called Leafy Alert, this is a flutter mobile application that helps you track and manage your plant collection with watering dates and photo management.</p>
+                                        </p>
                                             <br><br><br><br><br><br>
                                             <ul id="languages">
-                                                <li>C</li>
-                                                <li>C++</li>
                                                 <li>Java</li>
+                                                <li>C++</li>
                                                 <li>Python</li>
                                                 <li>HTML</li>
                                                 <li>CSS</li>
                                                 <li>JavaScript</li>
                                                 <li>C#</li>
+                                                <li>TypeScript</li>
+                                                <li>SQL</li>
                                             </ul>
                                     </div>
                                 </div>
@@ -78,12 +86,15 @@
                                         <h3>My Projects</h3>
                                         
                                         <div id="githubProject">
-                                            <a href="https://github.com/artpac/sudokuInC">
-                                                <h2>Sudoku</h2>
-                                                <p>A sudoku game that is written entirely in C</p>
+                                            <a href="https://github.com/artpac/HonoursProject">
+                                                <h2>Honours Project</h2>
+                                                <p>A game that is inspired by the board game "Hive". I am creating this project for my honours project at Edinburgh Napier University.
+                                                    The game is being developed in Java. The game will feature a single player mode, as well as an AI opponent for solo play.
+                                                    To create the AI opponent, I will be using a machine learning algrithm, to train and improve the AI's gameplay over time.
+                                                </p>
                                                 <br>
                                                 <ul id="languages">
-                                                    <li>C</li>
+                                                    <li>Java</li>
                                                 </ul>
                                             </a>
                                         </div>
@@ -94,6 +105,8 @@
                                                 <p>A website that I created and designed for my web technologies class at napier university.
                                                     I created this website to post my photos and a description of where I went, I categorised it by country and city so that it is easier to navigate.
                                                 </p>
+                                                <p></p>
+                                                <p><b><a href="https://artpac2050travel.com">Check out the website here</a></b></p>
                                                 <br>
                                                 <ul id="languages">
                                                     <li>HTML</li>
@@ -104,15 +117,14 @@
                                         </div>
 
                                         <div id="githubProject">
-                                            <a href="https://github.com/wompoloos/cyber-fortress">
-                                                <h2>Cyber Fortress</h2>
-                                                <p>A tower defence game that I planned and created in a group of three people.
-                                                    We created this game in our games engineering class at Napier University.
-                                                </p>
+                                            <a href="https://github.com/artpac/leafyAlert">
+                                                <h2>Leafy Alert</h2>
+                                                <p>A React Native mobile application that helps you track and manage your plant collection with
+                                                     easy photo management.</p>
                                                 <br>
                                                 <ul id="languages">
-                                                    <li>C++</li>
-                                                    <li>CMAKE</li>
+                                                    <li>TypeScript</li>
+                                                    <li>Flutter Application</li>
                                                 </ul>
                                             </a>
                                         </div>
